# DS_examples_2

./: CMakeLists.txt
binary_search_tree/: main.cpp
bubble_sort/: bubble.cpp
factorial/: factorial.cpp
insert_sort/: insertion.cpp
list_folders/: list_folders.cpp
merge_sort/: main.cpp
palindrome/: palindrome.cpp
queues/: main.cpp
quick_sort/: main.cpp
selection_sort/: selection.cpp
shell_sort/: shell.cpp
smart_pointers/: main.cpp
stacks/: stacks.cpp
